# Linda

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  main_linda_test.cpp  rafal.cpp  signal_handling_test.cpp  test_everything.cpp  tuple_pattern_test.cpp
headers/: CLI.h  Constants.h  Exceptions.h  ISerializable.h  Linda.h  Pattern.h  Signal.h  Signals.h  State.h  Tuple.h  TupleSpace.h  TupleSpaceConnectionException.h  TupleSpaceCreateException.h  TupleSpaceException.h
sources/: CLI.cpp  Pattern.cpp  Signals.cpp  Tuple.cpp  TupleSpace.cpp
tests/: OperationsTest.cpp  SignalsTest.cpp  TuplePatternTest.cpp  test1.cpp  test2.cpp  test3.cpp
